--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: hello-github-actions/action-add-labels@v1
+      - uses: ./
         with:
           labels: bug
