--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -8,6 +8,8 @@ jobs:
   label:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
+      
       - uses: ./action-a/add-label
         with:
           labels: "bug"
